--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,14 @@
 
 [tox]
 # envlist = py25, py26, py27, py33
-envlist = py27
+envlist = py26, py27
 
 [testenv]
 commands = nosetests
 deps =
+    nose
+
+[testenv:py26]
+deps =
+    unittest2
     nose
