remove nose as a requirement for testing

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,9 @@
 envlist = py26, py27, py33
 
 [testenv]
-commands = nosetests
+commands = python tests.py
 deps =
-    nose
 
 [testenv:py26]
 deps =
     unittest2
-    nose
