add coverage runner to tox

--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,15 @@ deps =
 
 [testenv:py26]
 deps =
+    {[testenv]deps}
     unittest2
+
+# for this environment, run coverage
+[testenv:py34]
+commands =
+    coverage erase
+    coverage run tests.py
+    coverage report
+deps =
+    {[testenv]deps}
+    coverage==3.7.1
