rename test module to something less generic

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py26, py27, py33, py34
 
 [testenv]
-commands = python tests.py
+commands = python test_project_runpy.py
 deps =
 
 [testenv:py26]
@@ -19,7 +19,7 @@ deps =
 [testenv:py34]
 commands =
     coverage erase
-    coverage run tests.py
+    coverage run test_project_runpy.py
     coverage report
 deps =
     {[testenv]deps}
