--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ module = "project_runpy"
 author = "Chris Chang"
 author-email = "c@crccheck.com"
 home-page = "https://github.com/crccheck/project_runpy"
+description-file = "README.rst"
 classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
