--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [flake8]
 max-line-length = 100
+
+[coverage:run]
+branch = True
+source = project_runpy
+
+[coverage:report]
+show_missing = True
+skip_covered = True
