--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,6 @@ jobs:
       - run: make test
 
   lint:
-    name: "Black"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,5 +32,5 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - run: pip install black
-      - run: black --check .
+      - run: pip install -r requirements.txt
+      - run: make lint
