refactor: consolidate config in pyproject.toml (#22)
and some basic maintenance on lint checking

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,14 @@ classifiers = [
   "Programming Language :: Python :: 3.7",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+
+[tool.coverage.run]
+branch = true
+source = ["project_runpy"]
+
+[tool.coverage.report]
+show_missing = true
+skip_covered = true
+
+[tool.ruff]
+line-length = 100
